styleapp.css
body {
  background-image: url(images/desk.png);
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

#button {
  width: 25%;
}

#choice {
  font-weight: bold ;
  
}

.modal {
  position: fixed;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  max-width: 35vh;
  padding:1em;
  z-index: 2;
  display: none;
  height: 10em;
  border: 2px solid white;
  background-color: white;
  text-align: center;
  font-style: normal;
  font-weight: bold;
  animation: fadein 1.5s;
}

.modal-overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 1;
  background-color: rgb(100, 84, 84);
  border-radius: 30px;
  opacity: 0.9;
  animation: fadein 1.5s;
}

.desk {
  /* background-image: url(images/desk.png);*/
  border-radius: 2em;
  height: 100vh;
}

.closed {
  animation: fadeout 0.75s;
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 0.75;
  }
}

@keyframes fadeout {
  from {
    opacity: 0.75;
  }
  to {
    opacity: 0;
  }
}

.layout {
  height: 30vh;
}

.content-table {
  border-collapse: collapse;
  margin: 25px 0;
  font-size: 0.9em;
  min-width: 280px;
  border-radius: 5px 5px 0 0;
  overflow: hidden;
}
.input {
  border-radius: 35px;
}

.content-table thead tr {
  background-color: #050e10;
  text-align: center;
  color: white;
  font-weight: bold;
}

.content-table th,
.content-table td {
  padding: 3px;
}

.content-table tbody tr {
  text-align: center;
}

.content-table tbody tr:nth-of-type(even) {
  background-color: #474747;
  color: white;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type="number"] {
  -moz-appearance: textfield;
  color: white;
  border-radius: 15px;
  border: 3px solid rgb(46, 6, 29);
  width: 75px;
  text-align: center;
  background-color: purple;
  font-weight: bolder;
}

input[type="number"]:hover {
  background-color: tomato;
}

input[type="text"] {
  border-radius: 15px;
  border: 3px solid rgb(46, 6, 29);
}


#namebox {
  margin-top: 25px;
}

.table-bg {
  background-color: white;
  border: 3px solid black;
  border-radius: 2rem;
}

.tabulator-color {
  background-color: rgb(46, 6, 29);
  height: 40vh;
}
.fa-rotate-135 {
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  -o-transform: rotate(90deg);
  transform: rotate(90deg);
}

i:hover {
  cursor: pointer;
  color: red;
}
.timer-case {
  border-radius:20px;
  width:200px;
  height:200px;
  background:linear-gradient(135deg,red,blue,green);
}

.white {
  background-color:white;
}
.timer {
  color: black;
  font-weight: bolder;
  font-size: 100%;
  width: 20%;
  height: 50px;
  padding-top:10px;
  padding-bottom:10px;
}
.divider  {
  background-color:white;
  width:10%;
  padding-top:10px;
  padding-bottom:10px;

}

.stopwatch-btns:hover {
  opacity:0.6;
}
.stopwatch-btns {
  background-color:black;
  color:white;
  height:50px;
  width: 50px;
  border-radius:50%;

}
.circle {
  border-radius: 40%;
}

.field {
  width: 100%;
}

.confirmation-modal {
  padding: 1em;
  position: fixed;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  min-width:200px;
  max-width: 35vh;
  color:white;
  z-index: 3;
  display: none;
  height: 10em;
  border: 2px solid rgb(252, 6, 6);
  background-color: rgb(252, 6, 6);
  text-align: center;
  text-transform: uppercase;
  font-weight: bold;
}

